objects/Event_Expense__c.object
<CustomObject>
    <description>Represents expenses related to events.</description>
    <fields>
        <fullName>Amount__c</fullName>
        <description>The monetary value of the expense.</description>
        <label>Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Associated_Event__c</fullName>
        <description>The event to which the expense is associated.</description>
        <label>Associated Event</label>
        <referenceTo>Event_Plan__c</referenceTo>
        <relationshipLabel>Event Expenses</relationshipLabel>
        <relationshipName>Event_Expenses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <description>The category or type of expense.</description>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Venue Rental</fullName>
                </value>
                <value>
                    <fullName>Catering and Food</fullName>
                </value>
                <value>
                    <fullName>Entertainment and Performers</fullName>
                </value>
                <value>
                    <fullName>Decorations and Ambiance</fullName>
                </value>
                <value>
                    <fullName>Marketing and Promotion</fullName>
                </value>
                <value>
                    <fullName>Staff and Personnel</fullName>
                </value>
                <value>
                    <fullName>Audiovisual Equipment</fullName>
                </value>
                <value>
                    <fullName>Transportation and Logistics</fullName>
                </value>
                <value>
                    <fullName>Miscellaneous Supplies</fullName>
                </value>
                <value>
                    <fullName>Security and Insurance</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Expense_Date__c</fullName>
        <description>The date when the expense was incurred.</description>
        <label>Expense Date</label>
        <type>Date</type>
    </fields>
    <label>Event Expense</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>EE-{0000}</displayFormat>
        <label>Event Expense Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Event Expenses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>